<resources>
    <string name="app_name">Appointment</string>
    <string name="google_api_key">AIzaSyB6qO81lkxYLLX3j1a8dja_6U2sS7ETC4s</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_register">Inregistrare</string>
    <string name="title_activity_forgot_password">Am uitat parola</string>
    <string name="title_activity_register_final_step">Inca un pas</string>
    <string name="title_activity_user_main_menu">Meniu</string>
    <string name="facebook_app_id">1150054408414271</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_invalid_email">Adresa de e-mail nu este valida</string>
    <string name="error_invalid_password">Parola ii prea scurta</string>
    <string name="error_invalid_password_spaces">Nu sunt permise spatiile in parola</string>
    <string name="error_invalid_phone_spaces">Nu sunt permise spatiile in numarul de telefon</string>
    <string name="error_invalid_name">Numele ii prea scurt</string>
    <string name="error_invalid_password_long">Parola ii prea lunga</string>
    <string name="error_field_required">Informatie necesara</string>
    <string name="field">Informatia</string>
    <string name="is_mandatory">este necesara!</string>
    <!--<string name="password_not_match">Password doesnt match!</string>-->
    <string name="email">E-mail</string>
    <string name="name">Nume</string>
    <string name="phone_number">Numar de telefon</string>
    <string name="password">Parola</string>
    <string name="confirm_password">Confirma parola</string>
    <string name="register_text">Inregistrare</string>
    <string name="show_email_login_text">Login with Email</string>
    <string name="email_login_text">Autentificare</string>
    <string name="facebook_login_text">Login with Facebook</string>
    <string name="success_request">Success</string>
    <string name="loading">Loading..</string>
    <string name="no_account">Nu ai cont?</string>
    <string name="crete_new">Creaza unul</string>
    <string name="reset_password">Reseteaza parola</string>
    <string name="enter_email_forgotpassword_text">Introdu email-ul pentru a primi o noua parola pe email.</string>
    <string name="forgot_password_text">Ai uitat parola?</string>
    <string name="enter_phone_number">Introdu numarul de telefon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_member_main_menu">MemberMainMenuActivity</string>
    <string name="title_activity_calendar">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="domains_title">Domeni</string>
    <string name="companies_title">Saloane</string>
    <string name="title_activity_company_details">CompanyDetails</string>
    <string name="title_activity_employees">Employees</string>
    <string name="title_activity_day_schedule">DayScheduleActivity</string>
    <string name="select_services_title">Programare pentru?</string>
    <string name="map_view_button_text">Vezi pe harta</string>
    <string name="back_grid_view_button_text">Inapoi</string>

</resources>
