<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:background="@color/back_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.botos.appointment.ui.activities.ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:textColor="@color/white_alpha"
            android:text="@string/enter_email_forgotpassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgotPasswordInput"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:singleLine="true"
                tools:ignore="MissingPrefix"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:background="@color/button_background"
        android:id="@+id/forgotPasswordButton"
        android:textColor="@color/white_alpha"
        android:text="@string/reset_password"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</RelativeLayout>
