<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_background"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.botos.appointment.ui.activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/text_color"
        android:id="@+id/registerEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:singleLine="true"
            tools:ignore="MissingPrefix"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/text_color"
        android:id="@+id/registerNameInput"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:singleLine="true"
            tools:ignore="MissingPrefix"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/text_color"
        android:id="@+id/registerNumberInput"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:singleLine="true"
            tools:ignore="MissingPrefix"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/text_color"
        android:id="@+id/registerPasswordInput"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:singleLine="true"
            tools:ignore="MissingPrefix"/>

    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_background"
        android:id="@+id/registerButton"
        android:textColor="@color/white_alpha"
        android:text="@string/register_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</RelativeLayout>
