<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/back_background"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.botos.appointment.ui.activities.RegisterFinalStepActivity"
    tools:showIn="@layout/activity_register_final_step">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:textColor="@color/white_alpha"
            android:text="@string/enter_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/text_color"
            android:id="@+id/finalStepPhoneEdit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@color/white_alpha"
                android:singleLine="true"
                tools:ignore="MissingPrefix"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_background"
        android:id="@+id/finalStepRegisterButton"
        android:textColor="@color/white_alpha"
        android:text="@string/register_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</RelativeLayout>
